# pi

./: LICENSE  README.md
PiMotionDetector/: CMakeLists.txt  README.md
PiMotionDetector/PiMotionDetector/: main.cpp
